Версия 5 исправленно.